update for signup verification important info for host

--- a/app/blocks/form-toggle/form-toggle.scss
+++ b/app/blocks/form-toggle/form-toggle.scss
@@ -180,4 +180,52 @@
       }
     }
   }
+
+  &_v3 {
+    margin-top: 0;
+
+    #{$b} {
+
+      &__title {
+        @include heading-2;
+
+        line-height: 1;
+        border-bottom-color: transparent;
+        margin-bottom: 0;
+
+        @include screen('sm') {
+          @include heading-4;
+
+          line-height: 1;
+        }
+      }
+
+      &__subtitle {
+        margin-bottom: 8px;
+        padding-right: 25px;
+
+        @include screen('sm') {
+          padding-right: 20px;
+        }
+      }
+
+      &__content {
+        padding: 15px 24px;
+
+        @include screen('sm') {
+          padding: 15px 10px;
+        }
+      }
+
+      &__check {
+        top: 18px;
+        right: 20px;
+
+        @include screen('sm') {
+          right: 10px;
+          top: 10px;
+        }
+      }
+    }
+  }
 }
