--- a/app/blocks/form/form.scss
+++ b/app/blocks/form/form.scss
@@ -381,6 +381,10 @@
       }
     }
 
+    &_mg36 {
+      margin-bottom: 36px;
+    }
+
     &_mg37 {
       margin-bottom: 37px;
     }
@@ -789,9 +793,21 @@
       }
     }
 
+    &_mgt-4 {
+      margin-top: -4px;
+
+      @include screen('sm') {
+        margin-top: 0;
+      }
+    }
+
     &_block {
       display: block;
       width: 100%;
+    }
+
+    &_lh143 {
+      line-height: 1.43;
     }
   }
 
@@ -1112,6 +1128,12 @@
     &_mgt60 {
       &:not(:first-child) {
         margin-top: 60px;
+      }
+    }
+
+    &_mgt65 {
+      &:not(:first-child) {
+        margin-top: 65px;
       }
     }
 
@@ -1665,6 +1687,33 @@
       @include screen('md') {
         flex: none;
         width: 100%;
+      }
+    }
+
+    &_requisites {
+      display: block;
+      width: 60.8%;
+      margin-right: 110px;
+
+      @include screen('lg') {
+        margin-right: 50px;
+      }
+
+      @include screen('md') {
+        width: 100%;
+        margin-right: 0;
+      }
+
+      &:not(:first-child) {
+        @include screen('md') {
+          margin-top: 50px;
+        }
+      }
+    }
+
+    &_lg-ord2 {
+      @include screen('md', min) {
+        order: 2;
       }
     }
   }
