--- a/app/blocks/offer-select/offer-select.pug
+++ b/app/blocks/offer-select/offer-select.pug
@@ -12,6 +12,4 @@ mixin offer-select(star)
 
 mixin offer-select-item(data)
   +e.LI.item
-    +offer-info-radio('offers', data.value, data.price, data.check)(data-select-item)
-      +box(class=data.boxclass)
-      +e.title!= data.title
+    +offer-info-radio('offers', data)(data-select-item)
