--- a/app/blocks/scroll-form/scroll-form.pug
+++ b/app/blocks/scroll-form/scroll-form.pug
@@ -3,7 +3,7 @@ mixin scroll-form()
   +sidebar
     +b.FORM.scroll-form&attributes(attributes)
       +e.H3.title Reservation form
-      +offer-select(true).__select
+      +offer-select(true).offer-select_right.__select
         each item in offers
           +offer-select-item(item)
       +e.P.text Including VAT and Service Fee
