--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -31,6 +31,7 @@ include ../blocks/dialog/dialog
 include ../blocks/divider/divider
 include ../blocks/dots/dots
 include ../blocks/dropdown/dropdown
+include ../blocks/error/error
 include ../blocks/facility/facility
 include ../blocks/factor/factor
 include ../blocks/feature/feature
@@ -84,6 +85,7 @@ include ../blocks/offer-counters/offer-counters
 include ../blocks/offer-info/offer-info
 include ../blocks/offer-item/offer-item
 include ../blocks/offer-list/offer-list
+include ../blocks/offer-option/offer-option
 include ../blocks/offer-select/offer-select
 include ../blocks/offer-space/offer-space
 include ../blocks/offer/offer
