--- a/app/pages/sitemap/sitemap.pug
+++ b/app/pages/sitemap/sitemap.pug
@@ -64,6 +64,7 @@ block content
         +link(href="404.html") Space pool - 404 (404.html)
         +link(href="deal-passport-agreement1.html") SpacePool - Deal Passport for Terms and Conditions (deal-passport-agreement1.html)
         +link(href="deal-passport-agreement2.html") SpacePool - Deal Passport for Terms and Conditions (deal-passport-agreement2.html)
+        +link(href="500.html") SpacePool - 500 (500.html)
 
       +page-title._small Попапы
       +e.list
