--- a/app/blocks/box/box.scss
+++ b/app/blocks/box/box.scss
@@ -61,6 +61,12 @@
     }
   }
 
+  &_size8 {
+    min-width: 8px;
+    width: 8px;
+    height: 8px;
+  }
+
   &_size9 {
     min-width: 9px;
     width: 9px;
