--- a/app/blocks/offer-select/offer-select.scss
+++ b/app/blocks/offer-select/offer-select.scss
@@ -20,6 +20,7 @@
     border-left-color: $color-text-light;
     border-right-color: $color-text-light;
     border-bottom-color: $color-border-light;
+    box-sizing: border-box;
   }
 
   &.is-open::before {
@@ -29,7 +30,6 @@
   &__head {
     position: relative;
     display: flex;
-    align-items: center;
     width: 100%;
     height: 78px;
     border: 1px solid $color-border-light;
@@ -39,6 +39,7 @@
     cursor: pointer;
     background-color: $color-white;
     z-index: 2;
+    box-sizing: border-box;
 
     #{$b}:hover & {
       border-color: $color-text-light;
@@ -74,27 +75,7 @@
     display: block;
     width: 100%;
     box-sizing: border-box;
-    padding: 0 30px 0 15px;
-
-    .offer-info {
-      overflow: hidden;
-
-      .box {
-        display: none;
-      }
-
-      &__head {
-        width: 100%;
-      }
-
-      &__title {
-        @include ellipsis(100%);
-      }
-
-      &__price {
-        @include ellipsis(100%);
-      }
-    }
+    padding: 10px 35px 0 15px;
   }
 
   &__star {
@@ -119,20 +100,36 @@
   &__dropdown {
     position: absolute;
     display: block;
-    width: 100%;
+    width: calc(100% + 94px);
     max-height: 326px;
     top: 100%;
-    left: 0;
+    right: 0;
     margin-top: -1px;
     opacity: 0;
     pointer-events: none;
     transition: opacity $ease-main;
     background-color: $color-white;
     border: 1px solid $color-text-light;
-    border-top-color: $color-border-light;
+    // border-top-color: $color-border-light;
     box-shadow: 1px 1px 8px rgba(34, 42, 46, .18);
-    border-radius: 0 0 3px 3px;
+    border-radius: 3px 0 3px 3px;
     z-index: 4;
+    box-sizing: border-box;
+
+    @include screen('md') {
+      width: 100%;
+    }
+
+    #{$b}_right & {
+      right: 0;
+      border-radius: 3px 0 3px 3px;
+    }
+
+    #{$b}_left & {
+      left: 0;
+      right: auto;
+      border-radius: 0 3px 3px 3px;
+    }
 
     #{$b}.is-open & {
       opacity: 1;
@@ -147,6 +144,7 @@
   }
 
   &__item {
+    min-height: 83px;
 
     &:not(:last-child) {
       border-bottom: 1px solid $color-border-light;
