--- a/app/pages/order-summary/order-summary-time.pug
+++ b/app/pages/order-summary/order-summary-time.pug
@@ -31,7 +31,7 @@ block content
                       each item in offers
                         +offer-select-item(item)
         +content-column-main._no-ptop
-          +pivot-table(true)
+          +pivot-table(false)
           +section._inner
             +section-header._flex._bmg
               +section-title('h3') Something you need to remember
