--- a/app/pages/ui-kit/ui-kit.pug
+++ b/app/pages/ui-kit/ui-kit.pug
@@ -619,6 +619,21 @@ block content
             p Это таб 3
           +tab-wrapper()(data-tab="tabе4" data-tab-group="testtabs2")
             p Это таб 4
+        +ui-description табы градиентные
+        +tabs
+          +tab()._gradient(data-tab-target="tabеre1").active Информация
+          +tab()._gradient(data-tab-target="tabеre2") Информация
+          +tab()._gradient(data-tab-target="tabеre3") Информация
+          +tab()._gradient(data-tab-target="tabеre4") Информация
+        +tabs-content
+          +tab-wrapper()(data-tab="tabеre1" data-tab-group="testtabs4").active
+            p Это таб 1
+          +tab-wrapper()(data-tab="tabеre2" data-tab-group="testtabs4")
+            p Это таб 2
+          +tab-wrapper()(data-tab="tabеre3" data-tab-group="testtabs4")
+            p Это таб 3
+          +tab-wrapper()(data-tab="tabеre4" data-tab-group="testtabs4")
+            p Это таб 4
         +ui-description табы кнопки
         +tabs
           +tab-container()(data-tab-target="taber1").active Информация
