--- a/app/blocks/tabs/tabs.scss
+++ b/app/blocks/tabs/tabs.scss
@@ -63,6 +63,16 @@
       }
     }
 
+    &_fz17 {
+      @include text-mid;
+
+      @include screen('sm') {
+        @include text12;
+
+        line-height: 1.2;
+      }
+    }
+
     &_orange {
       border-bottom-color: $color-hot-desk;
 
@@ -122,6 +132,40 @@
 
         @include screen('sm') {
           box-shadow: inset 0 -4px 0 $color-office-space;
+        }
+      }
+    }
+
+    &_gradient {
+      position: relative;
+      box-shadow: none;
+      background-color: #f7f7f7;
+      transition: background-color $ease-main;
+      width: auto;
+      flex: 1;
+
+      &::before {
+        @include pseudo;
+
+        width: 100%;
+        height: 6px;
+        background-image: linear-gradient(to left, #0cdba9 0%, #008199 100%);
+        opacity: 0;
+        bottom: 0;
+        left: 0;
+        transition: opacity $ease-main;
+
+        @include screen('sm') {
+          height: 5px;
+        }
+      }
+
+      &:hover, &.active {
+        box-shadow: none;
+        background-color: $color-white;
+
+        &::before {
+          opacity: 1;
         }
       }
     }
