--- a/app/blocks/table/table.scss
+++ b/app/blocks/table/table.scss
@@ -67,7 +67,7 @@
           padding-left: 0;
         }
 
-        &:last-child {
+        &:last-child:not(:first-child) {
           text-align: right;
         }
 
