--- a/app/components/form-order-summary/form-order-summary.scss
+++ b/app/components/form-order-summary/form-order-summary.scss
@@ -47,12 +47,10 @@
   .form {
 
     &__text {
-      &:not(:first-child) {
-        margin-top: -8px;
+      line-height: 1.2;
 
-        @include screen('sm') {
-          margin-top: 14px;
-        }
+      &:not(:first-child) {
+        margin-top: 20px;
       }
     }
   }
