--- a/app/pages/sitemap/sitemap.pug
+++ b/app/pages/sitemap/sitemap.pug
@@ -99,6 +99,8 @@ block content
       +e.list
         +link.js-popup-depends-width(href="#" data-source="xl:#popup-invoices-host,md:#popup-invoices-host-mobile") Popup invoices for Host
         +link.js-popup-depends-width(href="#" data-source="xl:#popup-invoice-host,md:#popup-invoice-host-mobile") Popup One Invoice for Host
+        +link.js-popup-depends-width(href="#" data-source="xl:#popup-order-host,md:#popup-order-mobile-host") Popup order summary HOST
+        +link.js-popup-depends-width(href="#" data-source="xl:#popup-order-guest,md:#popup-order-mobile-guest") Popup order summary GUEST
 
 
 block panels
