--- a/app/blocks/info-editable/info-editable.scss
+++ b/app/blocks/info-editable/info-editable.scss
@@ -90,6 +90,11 @@
       }
     }
 
+    &_wide {
+      flex: 1;
+      margin-left: 0;
+    }
+
     b {
       font-weight: 700;
     }
@@ -123,6 +128,37 @@
 
     &_bold {
       font-weight: 700;
+    }
+
+    &_wide {
+      flex: 1;
+    }
+
+    &-input {
+      display: inline-block;
+      min-width: 20px;
+      max-width: 90px;
+      width: auto !important;
+      font-size: inherit;
+      font-weight: inherit;
+      line-height: inherit;
+      height: auto;
+      color: inherit;
+      text-align: right;
+
+      @include screen('sm') {
+        max-width: 75px;
+      }
+
+      &_wide {
+        min-width: 0;
+        width: 100% !important;
+        max-width: none;
+      }
+
+      &:not(:last-child) {
+        margin-right: 4px;
+      }
     }
   }
 
